--- a/ha.html
+++ b/ha.html
@@ -1,2 +1,3 @@
+this is some update on featureA,hope you will like it
 this is somethin dope
 https://www.bookstack.cn/read/javascript-tutorial/docs-stdlib-array.md
