--- a/ha.html
+++ b/ha.html
@@ -1,2 +1,3 @@
+i am going to make some changes for fixB
 this is somethin dope
 https://www.bookstack.cn/read/javascript-tutorial/docs-stdlib-array.md
